# fastapi

./: main.py  pyproject.toml  requirements.txt
